[project]
name = "vixsrc-scraper"
version = "0.1.1"
description = "Scraper for vixsrc"
readme = "README.md"
authors = [
    { name = "SimoneFelici", email = "felicisimone9@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "scrapling[fetchers]>=0.4.8",
    "yt-dlp[default]>=2026.3.17",
]

[project.scripts]
vixsrc-scraper = "vixsrc_scraper:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"
